# LabProgrammazione

./: CMakeLists.txt  ConcreteObserver.h  File.cpp  File.h  MainWindow.cpp  MainWindow.h  Observer.h  ResourcesLoader.cpp  ResourcesLoader.h  Subject.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp  testFile.cpp  testObserver.cpp  testResourcesLoader.cpp
